# devctl-py

./: .dockerignore  .env.example  .gitignore  AI_CONTEXT.md  Dockerfile  README.md  catalog-info.yaml  config.example.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml
backstage/templates/devctl-cli-plugin/: template.yaml
backstage/templates/devctl-cli-plugin/skeleton/: README.md  catalog-info.yaml  mkdocs.yml  pyproject.toml
backstage/templates/devctl-cli-plugin/skeleton/docs/: index.md
backstage/templates/devctl-cli-plugin/skeleton/src/devctl_plugin/: __init__.py
backstage/templates/devctl-cli-plugin/skeleton/src/devctl_plugin/commands/: main.py
backstage/templates/devctl-cli-plugin/skeleton/tests/: test_${{ values.name }}.py
docker/: entrypoint.sh
docs/: ai-commands.md  argocd.md  aws-commands.md  bedrock-ai.md  compliance.md  configuration.md  confluence.md  deployments.md  docker.md  getting-started.md  grafana.md  index.md  jira.md  kubernetes.md  logs.md  pagerduty.md  predictive-scaling.md  runbooks.md  slack.md  ssm.md  terraform.md  workflows.md
plans/: 01-parallel-workflows.md  02-developer-experience.md  03-cost-intelligence.md  04-ai-features.md  05-event-driven-automation.md  06-web-dashboard.md  07-integration-testing.md  README.md  compliance-security-workflows.md  deployment-workflows.md  gitops-cicd-workflows.md  incident-response-workflows.md  oncall-workflows.md  operations-workflows.md
src/devctl/: __init__.py  __main__.py  cli.py  config.py
src/devctl/clients/: __init__.py  argocd.py  aws.py  confluence.py  github.py  grafana.py  jira.py  k8s.py  pagerduty.py  slack.py
src/devctl/commands/: __init__.py  workflow.py
src/devctl/commands/ai/: __init__.py  ask.py  explain.py  review.py
src/devctl/commands/argocd/: __init__.py  apps.py
src/devctl/commands/aws/: __init__.py  bedrock.py  budget.py  cloudwatch.py  cost.py  ecr.py  eks.py  forecast.py  iam.py  s3.py  ssm.py  tagging.py
src/devctl/commands/compliance/: __init__.py
src/devctl/commands/confluence/: __init__.py
src/devctl/commands/deploy/: __init__.py
src/devctl/commands/github/: __init__.py  actions.py  prs.py  releases.py  repos.py
src/devctl/commands/grafana/: __init__.py  alerts.py  annotations.py  dashboards.py  datasources.py  metrics.py
src/devctl/commands/jira/: __init__.py  boards.py  issues.py  sprints.py
src/devctl/commands/k8s/: __init__.py  deployments.py  events.py  nodes.py  pods.py
src/devctl/commands/logs/: __init__.py
src/devctl/commands/ops/: __init__.py  cost_report.py  health.py
src/devctl/commands/pagerduty/: __init__.py  incidents.py  oncall.py  schedules.py  services.py
src/devctl/commands/runbooks/: __init__.py
src/devctl/commands/slack/: __init__.py
src/devctl/commands/terraform/: __init__.py
src/devctl/core/: __init__.py  async_utils.py  context.py  exceptions.py  logging.py  output.py  progress.py  suggestions.py  utils.py
src/devctl/core/logs/: __init__.py  base.py  cloudwatch.py  eks.py  loki.py
src/devctl/dashboards/: __init__.py
src/devctl/dashboards/templates/: cost-overview.json  deployment-overview.json  incident-response.json  oncall-overview.json  predictive-scaling.json
src/devctl/deploy/: __init__.py  models.py  state.py
src/devctl/deploy/strategies/: __init__.py  base.py  blue_green.py  canary.py  rolling.py
src/devctl/runbooks/: __init__.py  audit.py  engine.py  markdown_parser.py  schema.py
src/devctl/workflows/: __init__.py  engine.py  graph.py  parallel.py  results.py  schema.py
src/devctl/workflows/templates/: access-review-quarterly.yaml  blue-green-switch.yaml  canary-deploy-monitored.yaml  certificate-rotation.yaml  daily-ops-report.yaml  database-maintenance.yaml  dependency-update.yaml  deploy-with-jira.yaml  escalation-path.yaml  feature-branch-cleanup.yaml  hotfix-pipeline.yaml  incident-postmortem.yaml  incident-resolve.yaml  (+24 more)
tests/: __init__.py  conftest.py  test_aws_integration.py  test_cli.py  test_clients.py  test_config.py  test_dashboards.py  test_new_commands.py  test_output.py  test_parallel_workflows.py  test_progress.py  test_suggestions.py  test_workflows.py
