[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devctl-plugin-${{ values.name }}"
version = "0.1.0"
description = "${{ values.description }}"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["cli", "devops", "${{ values.name }}", "devctl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.entry-points."devctl.plugins"]
${{ values.name }} = "devctl_plugin.commands.main:register"

[tool.hatch.build.targets.wheel]
packages = ["src/devctl_plugin"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
strict = true
